fixinn missing pos

--- a/assignments_lan/ass_1.ipynb
+++ b/assignments_lan/ass_1.ipynb
@@ -346,6 +346,128 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "##### TO DO\n",
+    "## how to add pere loc org\n",
+    "## what happens when no noun verb etc in text?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## how to add pere loc org\n",
+    "\n",
+    "fp = \"/work/cds-lang-data/USEcorpus/USEcorpus/a1/0100.a1.txt\"\n",
+    "#load it with encoding \n",
+    "with open(fp, encoding=\"latin-1\") as f:\n",
+    "    text = f.read()\n",
+    "\n",
+    "#convert it with spac\n",
+    "\n",
+    "text = \"John McKinley lives in Washington D.C, it is the capital of the U.S.A. He works for Apple.\"\n",
+    "text_nlp = nlp(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PERSON', 'GPE', 'GPE', 'ORG']"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ent_extract = []\n",
+    "for i in text_nlp.ents:\n",
+    "    if i.label_ in [\"PERSON\",\"GPE\",\"ORG\"]:\n",
+    "        ent_extract.append(i.label_)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "ent_extract\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PERSON\n",
+      "GPE\n",
+      "GPE\n",
+      "ORG\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in text_nlp.ents:\n",
+    "    print(i.label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extract_this= [\"NOUN\", \"VERB\",\"ADJ\"]\n",
+    "extract = []\n",
+    "for i in text_nlp:\n",
+    "    if i.pos_ in extract_this:\n",
+    "        extract.append(i.pos_)\n",
+    "    else:\n",
+    "        pass \n",
+    "#cunt unique values\n",
+    "count_extracts = np.unique(extract, return_counts= True )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "n\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "#in case the POS is not in the text, it would return \n",
+    "#an array with one less item and that could scramble things\n",
+    "#so in case the asked POS is not there this part adds it as 0\n",
+    "missing_pos = []\n",
+    "for i in extract_this:\n",
+    "    if i not in extract:\n",
+    "        missing_pos.append(i)\n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
