counting non present pos as 0 added

--- a/assignments_lan/ass_1.ipynb
+++ b/assignments_lan/ass_1.ipynb
@@ -230,7 +230,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sorted(os.listdir(filepath))\n",
     "# function for 1 file from 1 folder\n",
     "\n",
     "def count_ofof(fp, extract_this = [\"NOUN\",\"VERB\",\"ADJ\",\"ADV\"]):\n",
@@ -251,8 +250,37 @@
     "            extract.append(i.pos_)\n",
     "        else:\n",
     "            pass \n",
-    "    #cunt unique values\n",
-    "    count_extracts = np.unique(extract, return_counts= True )\n",
+    "    \n",
+    "    #in case the POS is not in the text, it would return \n",
+    "    #an array with one less item and that could scramble things\n",
+    "    #so in case the asked POS is not there this part adds it as 0\n",
+    "\n",
+    "    #finding missing POS\n",
+    "    missing_pos = []\n",
+    "    for i in extract_this:\n",
+    "        if i not in extract:\n",
+    "            missing_pos.append(i)\n",
+    "        else:\n",
+    "            pass\n",
+    "    #making an equal length list of 0s\n",
+    "    missing_pos_zeros = []\n",
+    "    for i in missing_pos:\n",
+    "        missing_pos_zeros.append(0)\n",
+    "\n",
+    "    #returning counts of unique occurences\n",
+    "    if len(missing_pos) == 0:\n",
+    "        #returns count extracts\n",
+    "        count_extracts = np.unique(extract, return_counts= True )\n",
+    "    else:\n",
+    "        count_extracts = np.unique(extract, return_counts= True )  \n",
+    "\n",
+    "        #appends missing pos's\n",
+    "        fos = np.append(count_extracts[0],missing_pos)\n",
+    "        fos_zeros = np.append(count_extracts[1],missing_pos_zeros)\n",
+    "        fos_full = (fos,fos_zeros)\n",
+    "\n",
+    "        count_extracts = fos_full\n",
+    "\n",
     "    return(count_extracts)\n"
    ]
   },
@@ -354,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,13 +395,13 @@
     "\n",
     "#convert it with spac\n",
     "\n",
-    "text = \"John McKinley lives in Washington D.C, it is the capital of the U.S.A. He works for Apple.\"\n",
+    "text = \"John McKinley in Washington D.C, it is the capital of the U.S.A. He for Apple.\"\n",
     "text_nlp = nlp(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +410,7 @@
        "['PERSON', 'GPE', 'GPE', 'ORG']"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,29 +466,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n\n",
-      "n\n",
-      "y\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#in case the POS is not in the text, it would return \n",
     "#an array with one less item and that could scramble things\n",
     "#so in case the asked POS is not there this part adds it as 0\n",
+    "\n",
+    "#finding missing POS\n",
     "missing_pos = []\n",
     "for i in extract_this:\n",
     "    if i not in extract:\n",
     "        missing_pos.append(i)\n",
     "    else:\n",
-    "        pass"
+    "        pass\n",
+    "#making an equal length list of 0s\n",
+    "missing_pos_zeros = []\n",
+    "for i in missing_pos:\n",
+    "    missing_pos_zeros.append(0)\n",
+    "\n",
+    "if len(missing_pos) == 0:\n",
+    "    #returns count extracts\n",
+    "    count_extracts = np.unique(extract, return_counts= True )\n",
+    "else:\n",
+    "     count_extracts = np.unique(extract, return_counts= True )  \n",
+    "\n",
+    "    #appends missing pos's\n",
+    "    fos = np.append(count_extracts[0],missing_pos)\n",
+    "    fos_zeros = np.append(count_extracts[1],missing_pos_zeros)\n",
+    "    fos_full = (fos,fos_zeros)\n",
+    "\n",
+    "    count_extracts = fos_full\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fos = np.append(count_extracts[0],missing_pos)\n",
+    "fos_zeros = np.append(count_extracts[1],missing_pos_zeros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fos_full = (fos,fos_zeros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['NOUN', 'VERB', 'ADJ'], dtype='<U4'), array([1, 0, 0]))"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fos_full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_pos_zeros = []\n",
+    "for i in missing_pos:\n",
+    "    missing_pos_zeros.append(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0]"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_pos_zeros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epty = []\n",
+    "len(epty)"
    ]
   },
   {
