--- a/assignments_lan/ass_1.ipynb
+++ b/assignments_lan/ass_1.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
    "source": [
     "##### TO DO\n",
     "## how to add pere loc org\n",
-    "## what happens when no noun verb etc in text?\n"
+    "## what happens when no noun verb etc in text?---- DONE\n"
    ]
   },
   {
@@ -449,78 +449,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "extract_this= [\"NOUN\", \"VERB\",\"ADJ\"]\n",
-    "extract = []\n",
-    "for i in text_nlp:\n",
-    "    if i.pos_ in extract_this:\n",
-    "        extract.append(i.pos_)\n",
-    "    else:\n",
-    "        pass \n",
-    "#cunt unique values\n",
-    "count_extracts = np.unique(extract, return_counts= True )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#in case the POS is not in the text, it would return \n",
-    "#an array with one less item and that could scramble things\n",
-    "#so in case the asked POS is not there this part adds it as 0\n",
-    "\n",
-    "#finding missing POS\n",
-    "missing_pos = []\n",
-    "for i in extract_this:\n",
-    "    if i not in extract:\n",
-    "        missing_pos.append(i)\n",
-    "    else:\n",
-    "        pass\n",
-    "#making an equal length list of 0s\n",
-    "missing_pos_zeros = []\n",
-    "for i in missing_pos:\n",
-    "    missing_pos_zeros.append(0)\n",
-    "\n",
-    "if len(missing_pos) == 0:\n",
-    "    #returns count extracts\n",
-    "    count_extracts = np.unique(extract, return_counts= True )\n",
-    "else:\n",
-    "     count_extracts = np.unique(extract, return_counts= True )  \n",
-    "\n",
-    "    #appends missing pos's\n",
-    "    fos = np.append(count_extracts[0],missing_pos)\n",
-    "    fos_zeros = np.append(count_extracts[1],missing_pos_zeros)\n",
-    "    fos_full = (fos,fos_zeros)\n",
-    "\n",
-    "    count_extracts = fos_full\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fos = np.append(count_extracts[0],missing_pos)\n",
-    "fos_zeros = np.append(count_extracts[1],missing_pos_zeros)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fos_full = (fos,fos_zeros)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 187,
    "metadata": {},
    "outputs": [
@@ -538,65 +466,6 @@
    "source": [
     "fos_full"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "missing_pos_zeros = []\n",
-    "for i in missing_pos:\n",
-    "    missing_pos_zeros.append(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 0]"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "missing_pos_zeros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "epty = []\n",
-    "len(epty)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
