finished assignment1, added quick git setup

--- a/assignments_lan/ass_1.ipynb
+++ b/assignments_lan/ass_1.ipynb
@@ -367,8 +367,8 @@
     "## turn output to freq ------ DONE\n",
     "## make it into a nice table(s) ------ Done\n",
     "## clean metadata ----DONE\n",
-    "##call functions from separate file\n",
-    "## save it\n"
+    "##call functions from separate file ---DONE\n",
+    "## save it --DONE\n"
    ]
   },
   {
