--- a/assingments_vis/ass_1/code/Assignment_1.ipynb
+++ b/assingments_vis/ass_1/code/Assignment_1.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
     "    #sort ascending\n",
     "    df_sorted = df_pd.sort_values(axis=0, by= \"Distance\", ascending= True)\n",
     "    #drops 1st entry (it's the target image themselves)\n",
-    "    df_sorted = df_pd.drop(axis=0, index=0)\n",
+    "    df_sorted = df_sorted.query('Distance != 0')\n",
     "    #keeps 5 closest images\n",
     "    df_fin = df_sorted[:n_returns]\n",
     "\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,82 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Filename</th>\n",
-       "      <th>Distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>image_0002.jpg</td>\n",
-       "      <td>23868.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>image_0003.jpg</td>\n",
-       "      <td>86165.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>image_0004.jpg</td>\n",
-       "      <td>5933.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>image_0005.jpg</td>\n",
-       "      <td>16967.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>image_0006.jpg</td>\n",
-       "      <td>11754.82</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Filename  Distance\n",
-       "1  image_0002.jpg  23868.38\n",
-       "2  image_0003.jpg  86165.81\n",
-       "3  image_0004.jpg   5933.99\n",
-       "4  image_0005.jpg  16967.65\n",
-       "5  image_0006.jpg  11754.82"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#save output\n",
-    "out_p = os.path.join(\"..\",\"out\")\n",
-    "count_df"
+    "out_p = os.path.join(\"..\",\"out\",target_name + \"_comp.csv\")\n",
+    "count_df.to_csv(out_p, index=False)"
    ]
   }
  ],
