--- a/assingments_vis/ass_1/code/Assignment_1.ipynb
+++ b/assingments_vis/ass_1/code/Assignment_1.ipynb
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
    ],
    "source": [
     "#take output csv\n",
-    "fp = \"/work/lang_anal/CDS_lang/assingments_vis/ass_1/out/\"\n",
+    "fp = os.path.join(\"..\",\"out\", \"\")\n",
     "fp_i = fp + os.listdir(fp)[0]\n",
     "\n",
     "#save result names from the csv\n",
