--- a/assignments_lan/assignment3/src/test.ipynb
+++ b/assignments_lan/assignment3/src/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -13,11 +13,10 @@
       "Requirement already satisfied: gensim in /home/ucloud/.local/lib/python3.10/site-packages (4.3.2)\n",
       "Requirement already satisfied: matplotlib in /home/ucloud/.local/lib/python3.10/site-packages (3.8.3)\n",
       "Requirement already satisfied: scikit-learn in /home/ucloud/.local/lib/python3.10/site-packages (1.4.1.post1)\n",
-      "Collecting pandas\n",
-      "  Downloading pandas-2.2.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: pandas in /home/ucloud/.local/lib/python3.10/site-packages (2.2.1)\n",
       "Requirement already satisfied: numpy>=1.18.5 in /home/ucloud/.local/lib/python3.10/site-packages (from gensim) (1.26.4)\n",
       "Requirement already satisfied: scipy>=1.7.0 in /home/ucloud/.local/lib/python3.10/site-packages (from gensim) (1.12.0)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in /home/ucloud/.local/lib/python3.10/site-packages (from gensim) (7.0.1)\n",
+      "Requirement already satisfied: smart-open>=1.8.1 in /home/ucloud/.local/lib/python3.10/site-packages (from gensim) (7.0.3)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in /home/ucloud/.local/lib/python3.10/site-packages (from matplotlib) (1.2.0)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/ucloud/.local/lib/python3.10/site-packages (from matplotlib) (0.12.1)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in /home/ucloud/.local/lib/python3.10/site-packages (from matplotlib) (4.50.0)\n",
@@ -27,21 +26,11 @@
       "Requirement already satisfied: pyparsing>=2.3.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /home/ucloud/.local/lib/python3.10/site-packages (from matplotlib) (2.8.2)\n",
       "Requirement already satisfied: joblib>=1.2.0 in /home/ucloud/.local/lib/python3.10/site-packages (from scikit-learn) (1.3.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/ucloud/.local/lib/python3.10/site-packages (from scikit-learn) (3.3.0)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Downloading pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Downloading tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/ucloud/.local/lib/python3.10/site-packages (from scikit-learn) (3.4.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/ucloud/.local/lib/python3.10/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/ucloud/.local/lib/python3.10/site-packages (from pandas) (2024.1)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Requirement already satisfied: wrapt in /home/ucloud/.local/lib/python3.10/site-packages (from smart-open>=1.8.1->gensim) (1.16.0)\n",
-      "Downloading pandas-2.2.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.0/13.0 MB\u001b[0m \u001b[31m26.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m505.5/505.5 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m345.4/345.4 kB\u001b[0m \u001b[31m11.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pytz, tzdata, pandas\n",
-      "Successfully installed pandas-2.2.1 pytz-2024.1 tzdata-2024.1\n"
+      "Requirement already satisfied: wrapt in /home/ucloud/.local/lib/python3.10/site-packages (from smart-open>=1.8.1->gensim) (1.16.0)\n"
      ]
     },
     {
@@ -59,19 +48,21 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import os\n",
+    "import re\n",
+    "from collections import Counter\n",
     "os.system(\"pip install gensim matplotlib scikit-learn pandas\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#embed\n",
     "query_word = \"love\"\n",
-    "n_embeds = 12\n",
+    "n_similar = 12\n",
     "query_array = model.most_similar(query_word,topn=n_similar)\n",
     "query_array.append((query_word, 1))"
    ]
@@ -142,7 +133,17 @@
     "for word_value_pair in query_array:\n",
     "    target_word = word_value_pair[0]\n",
     "\n",
-    "    for lyric_words in sub_data[lyric_words]\n",
+    "    for row in sub_data.loc[row]:\n",
+    "        song_title = row[\"song\"]\n",
+    "        song_lyric = row[\"text\"]\n",
+    "\n",
+    "        clean_lyric = re.sub(r\"\"\"\n",
+    "               [,.;@#?!&$\\n]+  # Accept one or more copies of punctuation\n",
+    "               \\ *           # plus zero or more copies of a space,\n",
+    "               \"\"\",\n",
+    "               \" \",          # and replace it with a single space\n",
+    "               song_lyric.lower(), flags=re.VERBOSE)\n",
+    "        \n",
     "\n",
     "\n",
     "    \n"
@@ -150,25 +151,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#preprocess for searching\n",
+    "#- remove \\n sign\n",
+    "#- make lowercase\n",
+    "# remove inter sentence an endsentence marks\n",
+    "clean = re.sub(r\"\"\"\n",
+    "               [,.;@#?!&$\\n]+  # Accept one or more copies of punctuation\n",
+    "               \\ *           # plus zero or more copies of a space,\n",
+    "               \"\"\",\n",
+    "               \" \",          # and replace it with a single space\n",
+    "               sub_data.loc[0][\"text\"].lower(), flags=re.VERBOSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_list = [\"bunny\",\"look\",\"her\"]\n",
+    "\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fos = Counter(clean.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"None of [Index([0, 2], dtype='int64')] are in the [columns]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/work/lang_anal/CDS_lang/assignments_lan/assignment3/src/test.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5028940-0.cloud.sdu.dk/work/lang_anal/CDS_lang/assignments_lan/assignment3/src/test.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m sub_data[[\u001b[39m0\u001b[39;49m,\u001b[39m2\u001b[39;49m]]\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:4096\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4094\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   4095\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 4096\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[1;32m   4098\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   4099\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6197\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6200\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   6202\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   6203\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6204\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:6249\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6247\u001b[0m \u001b[39mif\u001b[39;00m nmissing:\n\u001b[1;32m   6248\u001b[0m     \u001b[39mif\u001b[39;00m nmissing \u001b[39m==\u001b[39m \u001b[39mlen\u001b[39m(indexer):\n\u001b[0;32m-> 6249\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   6251\u001b[0m     not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[1;32m   6252\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"None of [Index([0, 2], dtype='int64')] are in the [columns]\""
-     ]
+     "data": {
+      "text/plain": [
+       "{'bunny': 0, 'look': 2, 'her': 3}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#count list elements in lyric\n",
+    "test_dictionary = {}\n",
+    "for i in c_list:\n",
+    "    opt = clean.split().count(i)\n",
+    "    temporary_dict = {i:opt}\n",
+    "    test_dictionary.update(temporary_dict)\n",
+    "\n",
+    "test_dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# van-e, melyik, hányszor\n",
+    "#cs (Artist,title,all_freq/all_songs,ind_count,ind_freq/all_songs)"
+   ]
   }
  ],
  "metadata": {
